fixed spacing on or on login page

--- a/src/Routes/LoginRoute/loginRoute.css
+++ b/src/Routes/LoginRoute/loginRoute.css
@@ -54,7 +54,7 @@ form.LoginForm h2 {
   background: #fff;
   position: absolute;
   left: 50%;
-  margin-left: -15px;
+  margin-left: -16px;
   top: -12px;
   text-align: center;
   color: #999;
